--- a/src/app/components/views/categoria/categoria-read/categoria-read.component.html
+++ b/src/app/components/views/categoria/categoria-read/categoria-read.component.html
@@ -3,12 +3,16 @@
         <h1>Categorias</h1>
     </div>
 
+    <div>
+        <button class="mat-elevation-z8" mat-flat-button color="primary">NOVA CATEGORIA</button>
+    </div>
+
     <div class="mat-elevation-z8 content-table">
-        <table class="table" mat-table [dataSource]="categorias" >
-            <ng-container matColumnDef="id">    
+        <table class="table" mat-table [dataSource]="categorias">
+            <ng-container matColumnDef="id">
                 <th mat-header-cell *matHeaderCellDef> ID </th>
                 <td mat-cell *matCellDef="let row"> {{row.id}} </td>
-            </ng-container> 
+            </ng-container>
 
             <!-- Name Column -->
             <ng-container matColumnDef="nome">
@@ -22,10 +26,27 @@
                 <td mat-cell *matCellDef="let row"> {{row.descricao}} </td>
             </ng-container>
 
+            <ng-container matColumnDef="livros">
+                <th mat-header-cell *matHeaderCellDef> LIVROS </th>
+                <td mat-cell *matCellDef="let row">
+                    <a href="#" class="livros">
+                        <i class="material-icons">book</i>
+                    </a>
+                </td>
+            </ng-container>
+
             <!-- Symbol Column -->
             <ng-container matColumnDef="acoes">
-                <th mat-header-cell *matHeaderCellDef> AÇÕES </th>
-                <td mat-cell *matCellDef="let row">  </td>
+                <th class="mat-header" mat-header-cell *matHeaderCellDef> AÇÕES
+                </th>
+                <td mat-cell *matCellDef="let row">
+                    <a class="edit" href="#">
+                        <i class="material-icons">edit</i>
+                    </a>
+                    <a class="delete" href="#">
+                        <i class="material-icons">delete</i>
+                    </a>
+                </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
