--- a/src/app/components/views/categoria/categoria-read/categoria-read.component.html
+++ b/src/app/components/views/categoria/categoria-read/categoria-read.component.html
@@ -4,7 +4,7 @@
     </div>
 
     <div>
-        <button class="mat-elevation-z8" mat-flat-button color="primary">NOVA CATEGORIA</button>
+        <button class="mat-elevation-z8" (click)="navegarParaCategoriaCreate()" mat-flat-button color="primary">NOVA CATEGORIA</button>
     </div>
 
     <div class="mat-elevation-z8 content-table">
