--- a/src/app/components/views/categoria/categoria-delete/categoria-delete.component.html
+++ b/src/app/components/views/categoria/categoria-delete/categoria-delete.component.html
@@ -3,20 +3,20 @@
 
     <mat-form-field class="form">
         <mat-label>Nome:</mat-label>
-        <input matInput type="text"
+        <input matInput [(ngModel)]="categoria.nome" type="text"
             name="nome" disabled >
     </mat-form-field>
 
     <mat-form-field class="form">
         <mat-label>Descrição:</mat-label>
-        <textarea matInput type="text" 
+        <textarea matInput [(ngModel)]="categoria.descricao" type="text" 
         name="descricao" disabled ></textarea>
     </mat-form-field>
 
     <div class="buttons">
-        <button class="mat-elevation-z8" mat-stroked-button
+        <button (click)="deletar()" class="mat-elevation-z8" mat-stroked-button
             color="primary">DELETAR</button>
-        <button class="mat-elevation-z8" mat-stroked-button 
+        <button (click)="cancel()" class="mat-elevation-z8" mat-stroked-button 
             color="warn">CANCELAR</button>
     </div>
 
