--- a/src/app/components/views/categoria/categoria-delete/categoria-delete.component.html
+++ b/src/app/components/views/categoria/categoria-delete/categoria-delete.component.html
@@ -14,7 +14,7 @@
     </mat-form-field>
 
     <div class="buttons">
-        <button (click)="deletar()" class="mat-elevation-z8" mat-stroked-button
+        <button (click)="delete()" class="mat-elevation-z8" mat-stroked-button
             color="primary">DELETAR</button>
         <button (click)="cancel()" class="mat-elevation-z8" mat-stroked-button 
             color="warn">CANCELAR</button>
