--- a/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
+++ b/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
@@ -1,35 +1,30 @@
 <div class="content">
     <div class="title">
-        <h1>Categorias</h1>
+        <h1>LIVROS</h1>
     </div>
 
     <div>
-        <button class="mat-elevation-z8" (click)="navegarParaCategoriaCreate()" mat-flat-button color="primary">NOVA CATEGORIA</button>
+        <button class="mat-elevation-z8" 
+        mat-flat-button color="primary">NOVO</button>
     </div>
 
     <div class="mat-elevation-z8 content-table">
-        <table class="table" mat-table [dataSource]="categorias">
+        <table class="table">
             <ng-container matColumnDef="id">
                 <th mat-header-cell *matHeaderCellDef> ID </th>
                 <td mat-cell *matCellDef="let row"> {{row.id}} </td>
             </ng-container>
 
             <!-- Name Column -->
-            <ng-container matColumnDef="nome">
+            <ng-container matColumnDef="titulo">
                 <th mat-header-cell *matHeaderCellDef> NOME </th>
-                <td mat-cell *matCellDef="let row"> {{row.nome}} </td>
-            </ng-container>
-
-            <!-- Weight Column -->
-            <ng-container matColumnDef="descricao">
-                <th mat-header-cell *matHeaderCellDef> DESCRIÇÃO </th>
-                <td mat-cell *matCellDef="let row"> {{row.descricao}} </td>
+                <td mat-cell *matCellDef="let row"> {{row.titulo}} </td>
             </ng-container>
 
             <ng-container matColumnDef="livros">
-                <th mat-header-cell *matHeaderCellDef> LIVROS </th>
+                <th mat-header-cell *matHeaderCellDef> LER LIVRO </th>
                 <td mat-cell *matCellDef="let row">
-                    <a routerLink="{{ row.id }}/livros" class="livros">
+                    <a  class="livros">
                         <i class="material-icons">book</i>
                     </a>
                 </td>
@@ -40,10 +35,10 @@
                 <th class="mat-header" mat-header-cell *matHeaderCellDef> AÇÕES
                 </th>
                 <td mat-cell *matCellDef="let row">
-                    <a class="edit" routerLink="update/{{row.id}}">
+                    <a class="edit" href="#">
                         <i class="material-icons">edit</i>
                     </a>
-                    <a class="delete" routerLink="delete/{{row.id}}">
+                    <a class="delete" href="#">
                         <i class="material-icons">delete</i>
                     </a>
                 </td>
