--- a/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
+++ b/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
@@ -9,7 +9,7 @@
     </div>
 
     <div class="mat-elevation-z8 content-table">
-        <table class="table">
+        <table class="table" mat-table [dataSource]="livros">        
             <ng-container matColumnDef="id">
                 <th mat-header-cell *matHeaderCellDef> ID </th>
                 <td mat-cell *matCellDef="let row"> {{row.id}} </td>
