--- a/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
+++ b/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
@@ -5,6 +5,7 @@
 
     <div>
         <button class="mat-elevation-z8" 
+        (click)="navegarParaCliarLivro()"
         mat-flat-button color="primary">NOVO</button>
     </div>
 
