--- a/src/app/components/views/livro/livro-create/livro-create.component.html
+++ b/src/app/components/views/livro/livro-create/livro-create.component.html
@@ -3,29 +3,35 @@
 
     <mat-form-field class="form">
         <mat-label>Titulo:</mat-label>
-        <input matInput [(ngModel)]="livro.titulo" type="text"
+        <input matInput [formControl]="titulo" required  [(ngModel)]="livro.titulo" type="text"
             name="titulo" placeholder="Ex. Computação"
             maxlength="100">
+        <mat-error *ngIf="titulo.invalid">{{ getMessage() }}</mat-error>
     </mat-form-field>
 
     <mat-form-field class="form">
         <mat-label>Nome do Autor:</mat-label>
-        <input matInput [(ngModel)]="livro.nome_autor" type="text" 
+        <input matInput [formControl]="nome_autor" required [(ngModel)]="livro.nome_autor" type="text" 
             name="nome_autor" placeholder="Ex. Fulano de tal"
             maxlength="100">
+        <mat-error *ngIf="nome_autor.invalid">{{ getMessage() }}</mat-error>
+
     </mat-form-field>
 
     <mat-form-field class="form">
         <mat-label>Texto:</mat-label>
-        <textarea matInput [(ngModel)]="livro.texto" type="text" 
+        <textarea matInput [formControl]="texto" [(ngModel)]="livro.texto" type="text" 
             name="texto" placeholder="Ex. ..."
             maxlength="2000000">
         </textarea>
+        <mat-error *ngIf="texto.invalid">{{ getMessage() }}</mat-error>
     </mat-form-field>
 
     <div class="buttons">
-        <button (click)="create()" class="mat-elevation-z8" mat-stroked-button
+        <button [disabled]="getMessage()" (click)="create()" class="mat-elevation-z8" mat-stroked-button
             color="primary">CRIAR</button>
+
+
         <button (click)="cancel()" class="mat-elevation-z8" mat-stroked-button 
             color="warn">CANCELAR</button>
             
