--- a/src/app/components/views/livro/livro-create/livro-create.component.html
+++ b/src/app/components/views/livro/livro-create/livro-create.component.html
@@ -3,15 +3,17 @@
 
     <mat-form-field class="form">
         <mat-label>Titulo:</mat-label>
-        <input matInput [formControl]="titulo" required  [(ngModel)]="livro.titulo" type="text"
-            name="titulo" placeholder="Ex. Computação"
+        <input matInput [formControl]="titulo" required  
+        [(ngModel)]="livro.titulo" 
+        type="text" name="titulo" placeholder="Ex. Computação"
             maxlength="100">
         <mat-error *ngIf="titulo.invalid">{{ getMessage() }}</mat-error>
     </mat-form-field>
 
     <mat-form-field class="form">
         <mat-label>Nome do Autor:</mat-label>
-        <input matInput [formControl]="nome_autor" required [(ngModel)]="livro.nome_autor" type="text" 
+        <input matInput [formControl]="nome_autor" required 
+        [(ngModel)]="livro.nome_autor" type="text" 
             name="nome_autor" placeholder="Ex. Fulano de tal"
             maxlength="100">
         <mat-error *ngIf="nome_autor.invalid">{{ getMessage() }}</mat-error>
@@ -20,7 +22,8 @@
 
     <mat-form-field class="form">
         <mat-label>Texto:</mat-label>
-        <textarea matInput [formControl]="texto" [(ngModel)]="livro.texto" type="text" 
+        <textarea matInput [formControl]="texto" 
+        [(ngModel)]="livro.texto" type="text" 
             name="texto" placeholder="Ex. ..."
             maxlength="2000000">
         </textarea>
