--- a/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
+++ b/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
@@ -36,7 +36,7 @@
                 <th class="mat-header" mat-header-cell *matHeaderCellDef> AÇÕES
                 </th>
                 <td mat-cell *matCellDef="let row">
-                    <a class="edit" href="#">
+                    <a class="edit" routerLink="{{ row.id }}/update">
                         <i class="material-icons">edit</i>
                     </a>
                     <a class="delete" href="#">
